--- a/overlay-ssos/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-ssos/frameworks/base/core/res/res/values/config.xml
@@ -26,4 +26,9 @@
     <!-- Enable face auth only when swiping security view -->
     <bool name="config_faceAuthOnSecurityView">true</bool>
 
+    <!-- Smart charge sysfs node and value for suspend/resume charging-->
+    <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
+    <string name="config_SmartChargingSuspendValue" translatable="false">1</string>
+    <string name="config_SmartChargingResumeValue" translatable="false">0</string>
+
 </resources>
